// examples/client.rs
use aps_engine::gen::aps::{
    aps_service_client::ApsServiceClient,
    SolveRequest, SolveParams, Weights, Limits, Job,
};

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    println!("ğŸš€ è¿æ¥ gRPC æœåŠ¡...");

    // è¿æ¥åˆ° gRPC æœåŠ¡
    let mut client = ApsServiceClient::connect("http://localhost:50051").await?;

    println!("âœ… è¿æ¥æˆåŠŸï¼");

    // æ„é€ è¯·æ±‚
    let request = tonic::Request::new(SolveRequest {
        request_id: "client-test-001".to_string(),
        plan_start_epoch_ms: 1704106800000,
        jobs: vec![
            Job {
                vin: "CLIENT001".to_string(),
                due_epoch_ms: 1704110400000,
                color: "RED".to_string(),
                config: "BASE".to_string(),
                assemble_minutes: 60,
                stamping_minutes: 0,
                welding_minutes: 0,
                painting_minutes: 0,
                energy_score: 100.0,
                emission_score: 50.0,
                mold_code: String::new(),
                welding_fixture: String::new(),
            },
            Job {
                vin: "CLIENT002".to_string(),
                due_epoch_ms: 1704114000000,
                color: "BLUE".to_string(),
                config: "PREMIUM".to_string(),
                assemble_minutes: 45,
                stamping_minutes: 0,
                welding_minutes: 0,
                painting_minutes: 0,
                energy_score: 80.0,
                emission_score: 40.0,
                mold_code: String::new(),
                welding_fixture: String::new(),
            },
        ],
        params: Some(SolveParams {
            algorithm: "sa".to_string(),
            time_budget_sec: 3,
            seed: 42,
            weights: Some(Weights {
                tardiness: 10.0,
                color_change: 50.0,
                config_change: 30.0,
                energy_excess: 2.0,
                emission_excess: 3.0,
                material_shortage: 0.0,
            }),
            limits: Some(Limits {
                max_energy_per_shift: 5000.0,
                max_emission_per_shift: 2500.0,
            }),
        }),
    });

    println!("\nğŸ“¤ å‘é€ Solve è¯·æ±‚...");

    // è°ƒç”¨ gRPC
    let response = client.solve(request).await?;
    let result = response.into_inner();

    println!("\nâœ… æ”¶åˆ°å“åº”ï¼");
    println!("   Request ID: {}", result.request_id);

    if let Some(summary) = result.summary {
        println!("   æˆæœ¬: {:.2}", summary.cost);
        println!("   é¢œè‰²åˆ‡æ¢: {}", summary.color_changes);
        println!("   é…ç½®åˆ‡æ¢: {}", summary.config_changes);
        println!("   è€—æ—¶: {}ms", summary.elapsed_ms);
    }

    println!("   æ’åº: {:?}", result.order);
    println!("   å¼•æ“ç‰ˆæœ¬: {}", result.engine_version);

    println!("\nğŸ‰ RPC è°ƒç”¨æˆåŠŸï¼");

    Ok(())
}
